# ufactory_ros2

./: .gitignore  .gitmodules  Dockerfile  README.md  plugins_new.txt  run.sh  run_eib.sh
control_ws/install/: local_setup.sh  setup.bash  setup.sh
control_ws/log/: latest_build
control_ws/src/xarm6_cpp_control/: CMakeLists.txt  package.xml
ri-misc/: .~lock.moveIt.odt#  TODO.txt  initProyectoRI-MISC_picEHU.odt  moveIt.odt
ri-misc/memoria/: InforMeX.cls  anexo.aux  anexo.tex  autoria.aux  autoria.tex  cinematica.aux  cinematica.tex  controlador.aux  controlador.tex  coste.aux  coste.tex  dinamica.aux  dinamica.tex  escalado.aux  escalado.tex  introduccion.aux  introduccion.tex  main.aux  main.bbl  main.bbl-SAVE-ERROR  main.bcf  main.blg  main.lof  main.lol  main.lot  main.out  main.run.xml  main.synctex(busy)  main.tex  main.toc  prog.aux  prog.tex  referencias.bib  resumen.tex  tema2.aux  ufactory.aux  ufactory.tex
ri-misc/memoria/Matlab/: cin_control.m  cin_control_salida.m  controller.m  dh.m  dh_mod.m  dh_mod_salida.txt  dh_salida.txt  din_control.m  din_control_salida.m  dynamic_replanner.m  ejercicio12.m  ik.m  (+22 more)
vpc-misc/: readme.txt  run.sh
vpc-misc/vpc_ws/camera_robot/: CMakeLists.txt
vpc-misc/vpc_ws/camera_robot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
vpc-misc/vpc_ws/camera_robot/install/camera_robot/share/camera_robot/: package.sh
vpc-misc/vpc_ws/camera_robot/install/camera_robot/share/camera_robot/worlds/: world.sdf
vpc-misc/vpc_ws/camera_robot/log/: latest_build
vpc-misc/vpc_ws/camera_robot/urdf/: robot.xacro
(+72 files in other folders)
